--- a/lhub.html
+++ b/lhub.html
@@ -83,19 +83,19 @@
     <h1>Lionime Hub</h1>
 
     <div class="grid">
-        <a href="https://your-anime-site.com" target="_blank" class="server-card">
+        <a href="https://lionbepthd.github.io/lionime/" target="_blank" class="server-card">
             <h2>Server 1</h2>
             <p>Anime</p>
         </a>
-        <a href="https://lionime-comic.com" target="_blank" class="server-card">
+        <a href="https://lionbepthd.github.io/lionimev1/" target="_blank" class="server-card">
             <h2>Server 2</h2>
             <p>Comic/Manga</p>
         </a>
-        <a href="https://lionime-novel.com" target="_blank" class="server-card">
+        <a href="https://lionbepthd.github.io/lionimev2" target="_blank" class="server-card">
             <h2>Server 3</h2>
             <p>Novel</p>
         </a>
-        <a href="https://your-donghua-site.com" target="_blank" class="server-card">
+        <a href="https://lionbepthd.github.io/lionimev3" target="_blank" class="server-card">
             <h2>Server 4</h2>
             <p>Donghua</p>
         </a>
