--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!-- Footer -->
     <footer class="bg-slate-800 p-4 text-center text-slate-400">
-        <p>&copy; 2025 Lionime. Semua hak dilindungi.</p>
+        <p>Jika Error Direfresh</p>
     </footer>
 
     <!-- Modal for Anime Detail -->
